--- a/templates/blog.html
+++ b/templates/blog.html
@@ -83,8 +83,16 @@
                             <p>That dominion stars lights dominion divide years for fourth have don't stars is that
                                 he earth it first without heaven in place seed it second morning saying.</p>
                             <ul class="blog-info-link">
-                                <li><a href="#"><i class="fa fa-user"></i> Travel, Lifestyle</a></li>
-                                <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-user"></i> Travel, Lifestyle
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-comments"></i> 03 Comments
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </article>
