--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="{% static 'css/animate.css'%}">
     <link rel="stylesheet" href="{% static 'css/slick.css'%}">
     <link rel="stylesheet" href="{% static 'css/slicknav.css'%}">
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="{% static 'https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css'%}">
 
     <link rel="stylesheet" href="{% static 'css/style.css'%}">
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
