--- a/templates/layouts/header.html
+++ b/templates/layouts/header.html
@@ -19,26 +19,17 @@
                                         <li class="{% if request.path == '/' %}active{% endif %}">
                                             <a href="{% url 'pages:home' %}">Home</a>
                                         </li>
-                                        <li class="{% if request.path == '/blog/' %}active{% endif %}">
-                                            <a href="{% url 'pages:about' %}">News</a>
-                                        </li>
                                         <li class="{% if request.path == '/destinations/' %}active{% endif %}">
-                                            <a href="{% url 'tours:list' %}">Destinations</a>
+                                            <a href="{% url 'destinations:list' %}">Destinations</a>
                                         </li>
-                                        <li>
-                                            <a href="#">Pages <i class="ti-angle-down"></i>
-                                            </a>
-                                            <ul class="submenu">
-                                                <li>
-                                                    <a href="blog.html">About</a>
-                                                </li>
-                                                <li>
-                                                    <a href="blog.html">blog</a>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <a href="contact.html">Contact</a>
+                                            <li>
+                                                <a href="{% url 'pages:about' %}">About</a>
+                                            </li>
+                                            <li>
+                                                <a href="{% url 'posts:list' %}">Blog</a>
+                                            </li>
+                                        <li class="{% if request.path == '/contact/' %}active{% endif %}">
+                                            <a href="{% url 'pages:contact' %}">Contacts</a>
                                         </li>
                                     </ul>
                                 </nav>
@@ -69,7 +60,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
