--- a/templates/destinations.html
+++ b/templates/destinations.html
@@ -106,12 +106,12 @@
                     <div class="col-lg-6 col-md-6">
                         <div class="single_place">
                             <div class="thumb">
-                                <img src="{{tours.images.url}}" alt="">
+                                <img src="{{tours.image.url}}" alt="">
                                 <a href="#" class="prise">$500</a>
                             </div>
                             <div class="place_info">
                                 <a href="destination_details.html"><h3>{{tours.title}}</h3></a>
-                                <p>{{tours.long_description}}</p>
+
                                 <div class="rating_days d-flex justify-content-between">
 
                                     <div class="days">
