--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
                         <div class="slider_text text-center">
                             <h3>Indonesia</h3>
                             <p>Pixel perfect design with awesome contents</p>
-                            <a href="#" class="boxed-btn3">Explore Now</a>
+                            <a href="{% url 'destinations:list' %}" class="boxed-btn3">Explore Now</a>
                         </div>
                     </div>
                 </div>
@@ -96,14 +96,15 @@
             </div>
         </div>
         <div class="row">
-            {% for home in object_list%}
+            {% for home in object_list %}
             <div class="col-lg-4 col-md-6">
                 <div class="single_destination">
                     <div class="thumb">
-                        <img src="{{ home.img.url }}" alt="">
+                        <img src="{{ home.images.url}}" alt="">
                     </div>
                     <div class="content">
-                        <p class="d-flex align-items-center">Italy <a href="travel_destination.html"> 07 Places</a></p>
+                        <p class="d-flex align-items-center">{{home.title}} <a href="travel_destination.html"> 07 Places</a></p>
+
                     </div>
                 </div>
             </div>
