--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
                         <div class="slider_text text-center">
                             <h3>Australia</h3>
                             <p>Pixel perfect design with awesome contents</p>
-                            <a href="#" class="boxed-btn3">Explore Now</a>
+                            <a href="{% url 'destinations:list' %}" class="boxed-btn3">Explore Now</a>
                         </div>
                     </div>
                 </div>
@@ -37,7 +37,7 @@
                         <div class="slider_text text-center">
                             <h3>Switzerland</h3>
                             <p>Pixel perfect design with awesome contents</p>
-                            <a href="#" class="boxed-btn3">Explore Now</a>
+                            <a href="{% url 'destinations:list' %}" class="boxed-btn3">Explore Now</a>
                         </div>
                     </div>
                 </div>
@@ -62,18 +62,8 @@
                         <div class="input_field">
                             <input type="text" placeholder="Where to go?">
                         </div>
-                        <div class="input_field">
-                            <input id="datepicker" placeholder="Date">
-                        </div>
-                        <div class="input_field">
-                            <select>
-                                <option data-display="Travel type">Travel type</option>
-                                <option value="1">Some option</option>
-                                <option value="2">Another option</option>
-                            </select>
-                        </div>
                         <div class="search_btn">
-                            <button class="boxed-btn4 " type="submit">Search</button>
+                            <button class="boxed-btn4 " type="submit" style="margin-left: -70px">Search</button>
                         </div>
                     </form>
                 </div>
@@ -96,15 +86,14 @@
             </div>
         </div>
         <div class="row">
-            {% for home in object_list %}
+            {% for home in homes %}
             <div class="col-lg-4 col-md-6">
                 <div class="single_destination">
                     <div class="thumb">
-                        <img src="{{ home.images.url}}" alt="">
+                        <img src="{{ home.img.url }}" alt="">
                     </div>
                     <div class="content">
                         <p class="d-flex align-items-center">{{home.title}} <a href="travel_destination.html"> 07 Places</a></p>
-
                     </div>
                 </div>
             </div>
@@ -126,29 +115,30 @@
             </div>
         </div>
         <div class="row">
+            {% for place in places%}
             <div class="col-lg-4 col-md-6">
                 <div class="single_place">
                     <div class="thumb">
-                        <img src="{% static 'img/place/1.png'%}" alt="">
+                        <img src="{{place.img.url}}" alt="">
                         <a href="#" class="prise">$500</a>
                     </div>
                     <div class="place_info">
-                        <a href="destination_details.html"><h3>California</h3></a>
-                        <p>United State of America</p>
+                        <a href="destination_details.html"><h3>{{place.title}}</h3></a>
                         <div class="rating_days d-flex justify-content-between">
                             <div class="days">
                                 <i class="fa fa-clock-o"></i>
-                                <a href="#">5 Days</a>
+                                <a href="#">{{place.created_at| date:'d. M Y'}}</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            {% endfor %}
         </div>
         <div class="row">
             <div class="col-lg-12">
                 <div class="more_place_btn text-center">
-                    <a class="boxed-btn4" href="#">More Places</a>
+                    <a class="boxed-btn4" href="{% url 'destinations:list' %}">More Places</a>
                 </div>
             </div>
         </div>
@@ -281,54 +271,24 @@
             </div>
         </div>
         <div class="row">
+            {% for trip in trips%}
             <div class="col-lg-4 col-md-6">
                 <div class="single_trip">
                     <div class="thumb">
-                        <img src="{% static 'img/trip/1.png'%}" alt="">
+                        <img src="{{trip.img.url}}" alt="">
                     </div>
                     <div class="info">
                         <div class="date">
-                            <span>Oct 12, 2019</span>
+                            <span>{{trip.created_at| date:'d F Y'}}</span>
                         </div>
-                        <a href="#">
+                        <a href="{% url 'posts:list' %}">
                             <h3>Journeys Are Best Measured In
                                 New Friends</h3>
                         </a>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="single_trip">
-                    <div class="thumb">
-                        <img src="{% static 'img/trip/2.png'%}" alt="">
-                    </div>
-                    <div class="info">
-                        <div class="date">
-                            <span>Oct 12, 2019</span>
-                        </div>
-                        <a href="#">
-                            <h3>Journeys Are Best Measured In
-                                New Friends</h3>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="single_trip">
-                    <div class="thumb">
-                        <img src="{% static 'img/trip/3.png'%}" alt="">
-                    </div>
-                    <div class="info">
-                        <div class="date">
-                            <span>Oct 12, 2019</span>
-                        </div>
-                        <a href="#">
-                            <h3>Journeys Are Best Measured In
-                                New Friends</h3>
-                        </a>
-                    </div>
-                </div>
-            </div>
+            {% endfor%}
         </div>
     </div>
 </div>
